# bcc

./: .gitignore  .prog_prefix  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  autogen.sh  bcc.1  config.h.in  configure  configure.ac  func  help_options.h  test.c
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
bcc-include/: bcc-config.h  iso646.h  limits.h  stdbool.h  stddef.h  stdint.h  stdnoreturn.h
config/os/haiku/: def_includes
cpp/: Makefile  Makefile.am  Makefile.in  autogen.sh  bcc-cpp  bcpp.1  bcpp.bash  config.h.in  configure  configure.ac  help_options.h  test.c  test.txt
cpp/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cpp/include/: buf.h  cpp.h  dir.h  expand.h  if.h  macro.h  strint.h  token.h
cpp/src/: bcpp.1  cpp.c  dir.c  eval.c  expand.c  if.c  include.c  macro.c  main.c  spec_macros.c  strint.c  token.c  util.c  warn.c
include/: bcc.h  binutils.h  buf.h  cmdline.h  cpp.h  error.h  expr.h  func.h  help_options.h  ir.h  lex.h  linker.h  optim.h  parser.h  scope.h  stmt.h  strdb.h  strint.h  target.h  token.h  unit.h  value.h
include/config/: base.h
include/config/arm/: arm.h
include/config/riscv/: riscv.h
include/config/x86/: elf.h  haiku.h  linux.h  x86.h
include/riscv/: cpu.h  emit_ir.h
include/riscv32/: cpu.h
include/x86/: gen.h  regs.h
libbcc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
libbcc/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
libbcc/src/: has_libbcc.c  memcpy.c
libbcc/src/arm/: Makefile.am  crtend.s  divsi.s  divui.s  modsi.s  modui.s
libbcc/src/riscv/: Makefile.am  divsi.s  divui.s  modsi.s  modui.s  mulsi.s  mului.s
libbcc/src/x86/: Makefile.am  crtbegin.s  crtend.asm  div32.asm  div32.s  div64.asm  div64.s  mod32.asm  mod32.s  mod64.asm  mod64.s  mul32.asm  mul32.s  mul64.asm  mul64.s
src/: bcc.1  bcc.c  binutils_helpers.c  cmdline.c  cpp.c  error.c  expr.c  func.c  ir.c  irgen.c  lex.c  linker.c  main.c  optim_common.c  optim_expr.c  optim_ir.c  optim_stmt.c  scope.c  stmt.c  strdb.c  strint.c  target.c  token.c  unit.c  value.c  vtype.c
src/arm/: Makefile.am  builtins.c  common.c  config.c  cpu.c  cpu.h  cpus.h  detect_sys.sh  emit_ir.c  emit_ir.h  gen.c  optim.c  regs.h  target.c
src/i386/: Makefile.am  builtins.c  check_deps.sh  common.h  gen.c  optim.c  regs.h  target.c
src/riscv/: Makefile.am  builtins.c  common.c  config.c  cpu.c  detect_sys.sh  emit_ir.c  emit_ir.h  gen.c  optim.c  regs.c  regs.h  target.c
src/riscv32/: Makefile.am  as.c  builtins.c  check_deps.sh  common.c  cpu.c  emit_ir.c  emit_ir.h  gen.c  optim.c  regs.h  target.c
src/x86/: Makefile.am  builtins.c  common.c  common.h  config.c  detect_sys.sh  emit_ir.c  emit_ir.h  gen.c  optim.c  regs.h  target.c
src/x86_64/: Makefile.am  builtins.c  check_deps.sh  common.h  gen.c  optim.c  regs.h  target.c
test/: Makefile  cases.h  lib.c  test  test.c  tester  tester.c
test2/: Makefile  muldivmod.h  test.c  test.c2  test2.c
util/: bcc.bash  bcl  check_deps_lib.sh  config.mk  find_as.sh  fix_crts.sh  getarch.sh  gethostarch.sh  read_doc.sh  test_install.sh  version.sh
util/m4/: ax_check_libc.m4  ax_check_target.m4  ax_find_as.m4  ax_find_ld.m4  ax_find_nasm.m4  ax_set_compilerdirs.m4  ax_set_predef_macros.m4  no-executables.m4
