#  Copyright (C) 2021 Benjamin Stürz
#  
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#  
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#  
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <https://www.gnu.org/licenses/>.



bcc_SOURCES += src/binutils_helpers.c	\
					src/arm/builtins.c		\
					src/arm/emit_ir.c			\
					src/arm/target.c			\
					src/arm/config.c			\
					src/arm/common.c			\
					src/arm/optim.c			\
					src/arm/gen.c

bcc_CPPFLAGS += -DUSE_BINUTILS=1
